<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_light">

    <TextView
        android:id="@+id/tViewTitleLevel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="50dp"
        android:text="@string/choose_level"
        android:gravity="center"
        android:textSize="30sp"
        android:textColor="@color/primary_text"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonEasy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:textStyle="bold"
        android:textSize="17sp"
        android:textColor="@color/primary_text"
        android:backgroundTint="@color/accent"
        android:text="@string/easy" />

    <Button
        android:id="@+id/buttonMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:textStyle="bold"
        android:textSize="17sp"
        android:textColor="@color/primary_text"
        android:backgroundTint="@color/accent"
        android:text="@string/medium" />

    <Button
        android:id="@+id/buttonHard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:textStyle="bold"
        android:textSize="17sp"
        android:textColor="@color/primary_text"
        android:backgroundTint="@color/accent"
        android:text="@string/hard" />

</LinearLayout>



