<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_light"
    tools:context=".ui.ResultActivity">

    <ImageView
        android:id="@+id/imageResult"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:src="@drawable/emoji_emotions_yellowp"
        app:layout_constraintBottom_toTopOf="@+id/tvMaxRight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMaxRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/primary_text"
        android:textStyle="bold"
        android:textSize="22sp"
        android:text="@string/your_correct_answer_s"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvMaxWrong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColor="@color/primary_text"
        android:textSize="22sp"
        android:textStyle="bold"
        android:text="@string/your_incorrect_answers_s"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMaxRight" />

    <Button
        android:id="@+id/again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/accent"
        android:text="@string/play_again"
        android:textColor="@color/primary_text"
        android:textSize="17sp"
        android:textStyle="bold"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/backMenu"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/backMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/accent"
        android:layout_marginBottom="40dp"
        android:textSize="17sp"
        android:textStyle="bold"
        android:text="@string/main_menu"
        android:textColor="@color/primary_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/again"/>


</androidx.constraintlayout.widget.ConstraintLayout>